Fixed nav bar sub menus remain open on mobile resolutions on desktop

--- a/front-reactive/src/app/general/header/header.component.css
+++ b/front-reactive/src/app/general/header/header.component.css
@@ -30,8 +30,5 @@
   right: 70px;
 }
 
-/*.desktop {
-  min-width: 1000px;
-}*/
 
 
