--- a/front-reactive/src/app/general/language/language.component.css
+++ b/front-reactive/src/app/general/language/language.component.css
@@ -7,3 +7,7 @@
   min-height: 80px!important;
   border-bottom: 1px solid #e7e7e7!important;
 }
+
+.dropdown-mobile {
+  height: 50px;
+}
