--- a/front-reactive/src/app/general/user-panel/user-panel.component.css
+++ b/front-reactive/src/app/general/user-panel/user-panel.component.css
@@ -8,3 +8,7 @@
   border-bottom: 1px solid #e7e7e7!important;
 }
 
+.dropdown-mobile {
+  height: 50px;
+}
+
