--- a/front-reactive/src/app/login/sign-in/sign-in-wrapper.component.css
+++ b/front-reactive/src/app/login/sign-in/sign-in-wrapper.component.css
@@ -13,6 +13,10 @@
   border-bottom: 1px solid #e7e7e7!important;
 }
 
+.dropdown-mobile {
+  height: 50px;
+}
+
 .signOutLink {
   background: none!important;
 }
